--- a/apps/client/src/components/test-builder/test-builder.component.html
+++ b/apps/client/src/components/test-builder/test-builder.component.html
@@ -1,230 +1,252 @@
-<div class="drawer drawer-open drawer-end">
-	<input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
-	<div class="flex flex-col">
+<div class="flex">
+	<div class="flex flex-col w-2/3">
 		@if(!testManager.allTests().length || !testManager.allFlows().length) {
 		<ng-container *ngTemplateOutlet="WelcomePage"></ng-container>
 		}
 
-		<div class="flex-col p-4 h-full">
-			<div class="flex flex-col gap-2 h-full">
-				@if(selectedTest; as test) {
-				<app-test-code-editor class="h-[80%]" [test]="test"></app-test-code-editor>
-				} @if(selectedFlow && !selectedTest) {
+		<div class="flex flex-col gap-2 h-full p-4">
+			@if(selectedTest; as test) {
+			<app-test-code-editor class="h-[80%]" [test]="test"></app-test-code-editor>
+			} @else if(selectedFlow && !selectedTest) {
 
-				<div class="flex flex-col w-full items-center">
-					<h1 class="text-5xl mb-10 px-2 text-neutral-content">
-						{{ selectedFlow.name }}
-					</h1>
-					<small class="text-gray-400 min-w-fit">
-						last saved: {{ selectedFlow.updatedAt | date : 'dd MMM HH:mm' }}
-					</small>
-				</div>
-
-				<div class="divider divide-neutral-content w-full">Flow builder</div>
-				<!-- {{selectedFlowRunResult | json}} -->
-				<app-test-composer class="w-full flex justify-center" [flow]="selectedFlow"></app-test-composer>
-
-				@if(selectedFlow && selectedFlow.flowTests.length) {
-				<div class="flex justify-between p-4 w-full">
-					<button class="btn btn-accent mt-4" (click)="runFlow()">Run Flow</button>
-					<button class="btn btn-primary mt-4" (click)="saveFlow()">Save</button>
-				</div>
-				} }
+			<div class="flex flex-col w-full items-center">
+				<h1 class="text-5xl mb-10 px-2 text-neutral-content">
+					{{ selectedFlow!.name }}
+				</h1>
+				<small class="text-gray-400 min-w-fit">
+					last saved: {{ selectedFlow!.updatedAt | date : 'dd MMM HH:mm' }}
+				</small>
 			</div>
+
+			<div class="divider divide-neutral-content w-full">Flow builder</div>
+			<!-- {{selectedFlowRunResult | json}} -->
+			<app-test-composer class="w-full flex justify-center" [flow]="selectedFlow!"></app-test-composer>
+
+			@if(selectedFlow && selectedFlow!.flowTests.length) {
+			<div class="flex justify-between p-4 w-full items-center">
+				<button class="btn btn-primary mt-4 text-black hover:text-white hover:scale-105" (click)="saveFlow()">Save Changes</button>
+				<div class="flex gap-2">
+					<button class="btn btn-error mt-4 hover:text-white hover:scale-105" onclick="confirm_cancel_modal.showModal()">Cancel</button>
+					<button class="btn btn-accent mt-4 hover:text-white hover:scale-105" (click)="runFlow()">
+						<ng-icon name="heroPlayCircle" size="1.25rem"></ng-icon>
+						Test Flow
+					</button>
+				</div>
+			</div>
+			} }
 		</div>
 	</div>
 
-	<div class="drawer-side min-w-[30vw] max-w-[30vw] override-overflow">
-		<label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
-		<ul class="menu bg-base-200 text-base-content h-full w-full">
-			<div class="tabs tabs-lift">
-				<input
-					type="radio"
-					name="divider_tabs"
-					class="tab w-1/2"
-					aria-label="Tests"
-					[checked]="!testManager.allTests().length ? 'checked' : ''" />
-				<div class="tab-content bg-base-100 border-base-300 p-2">
-					<li>
-						<button class="btn btn-primary" onclick="create_test_modal.showModal()">
-							<span class="text-2xl mb-0.5">+</span>
-							Add Test
-						</button>
-					</li>
+	<ul class="menu bg-base-200 text-base-content h-full w-1/3">
+		<div class="tabs tabs-lift">
+			<input
+				type="radio"
+				name="divider_tabs"
+				class="tab w-1/2"
+				aria-label="Tests"
+				[checked]="!testManager.allTests().length ? 'checked' : ''" />
+			<div class="tab-content bg-base-100 border-base-300 p-2">
+				<li>
+					<button class="btn btn-primary" onclick="create_test_modal.showModal()">
+						<span class="text-2xl mb-0.5">+</span>
+						Add Test
+					</button>
+				</li>
 
-					<ul
-						class="list bg-base-100 flex flex-col gap-2"
-						cdkDropList
-						[cdkDropListData]="testFlows()"
-						[cdkDropListConnectedTo]="['selectedTestsList']">
-						<li class="p-4 pb-2 text-xs opacity-60 tracking-wide">All Tests</li>
-						@for(test of testManager.allTests(); track $index; let i = $index) {
-						<app-test-list-item
-							(clicked)="selectTest($event)"
-							(recordTest)="startTestRecording($event)"
-							(deleteTest)="deleteTest($event)"
-							[test]="test"></app-test-list-item>
+				<ul
+					class="list bg-base-100 flex flex-col gap-2 overflow-auto max-h-full"
+					cdkDropList
+					[cdkDropListData]="testFlows()"
+					[cdkDropListConnectedTo]="['selectedTestsList']">
+					<li class="p-4 pb-2 text-xs opacity-60 tracking-wide">All Tests</li>
+					@for(test of testManager.allTests(); track $index; let i = $index) {
+					<app-test-list-item
+						(clicked)="selectTest($event)"
+						(recordTest)="startTestRecording($event)"
+						(deleteTest)="deleteTest($event)"
+						[test]="test"></app-test-list-item>
 
-						}
-					</ul>
-				</div>
-				<input
-					type="radio"
-					name="divider_tabs"
-					class="tab w-1/2"
-					aria-label="Flows"
-					[checked]="testManager.allTests().length ? 'checked' : ''" />
-				<div class="tab-content bg-base-100 border-base-300 p-2">
-					<li>
-						<button class="btn btn-primary" onclick="create_flow_modal.showModal()">
-							<span class="text-2xl mb-0.5">+</span>
-							Add Flow
-						</button>
-					</li>
+					}
+				</ul>
+			</div>
+			<input
+				type="radio"
+				name="divider_tabs"
+				class="tab w-1/2"
+				aria-label="Flows"
+				[checked]="testManager.allTests().length ? 'checked' : ''" />
+			<div class="tab-content bg-base-100 border-base-300 p-2">
+				<li>
+					<button class="btn btn-primary" onclick="create_flow_modal.showModal()">
+						<span class="text-2xl mb-0.5">+</span>
+						Add Flow
+					</button>
+				</li>
 
-					<ul class="list bg-base-100 flex flex-col gap-2">
-						<li class="p-4 pb-2 text-xs opacity-60 tracking-wide">All Flows</li>
-						@for(flow of testManager.allFlows(); track $index) {
-						<app-flow-list-item  (clicked)="selectFlow($event)" [flow]="flow"></app-flow-list-item>
+				<ul class="list bg-base-100 flex flex-col gap-2">
+					<li class="p-4 pb-2 text-xs opacity-60 tracking-wide">All Flows</li>
+					@for(flow of testManager.allFlows(); track $index) {
+					<app-flow-list-item (clicked)="selectFlow($event)" [flow]="flow"></app-flow-list-item>
 
-						}
-					</ul>
+					}
+				</ul>
+			</div>
+		</div>
+	</ul>
+
+	<ng-template #WelcomePage>
+		<div class="hero bg-base-100">
+			<div class="hero-content text-center h-full pt-10">
+				<div class="max-w-lg">
+					@if(testManager.allTests().length <= 0) {
+					<h1 class="text-5xl font-bold">Welcome to the Test Builder</h1>
+					<h3 class="text-lg mt-4">You have not created any tests yet.</h3>
+
+					<p class="py-6">Click on the button below to create a new test.</p>
+
+					<button class="btn btn-primary" onclick="create_test_modal.showModal()">Create New Test</button>
+					} @else if(testManager.allFlows().length <= 0) {
+					<h3 class="text-3xl mt-4">You have not created any flows yet.</h3>
+
+					<p class="py-6">
+						Flows link tests together to create a chain that can be used to test a user's journey through
+						your application.
+					</p>
+
+					<button class="btn btn-primary" onclick="create_flow_modal.showModal()">Create New Flow</button>
+					}
 				</div>
 			</div>
-		</ul>
-	</div>
+		</div>
+	</ng-template>
+
+	<!-- Open the modal using ID.showModal() method -->
+	<dialog id="create_test_modal" class="modal">
+		<div class="modal-box">
+			<h3 class="text-lg font-bold">Create New Test</h3>
+
+			<form [formGroup]="newTestForm">
+				<fieldset class="fieldset">
+					<legend class="fieldset-legend">Test Name</legend>
+					<input
+						[class.input-error]="
+							newTestForm.controls['name'].invalid && newTestForm.controls['name'].touched
+						"
+						type="text"
+						class="input"
+						placeholder="Type here"
+						formControlName="name" />
+					<p
+						class="fieldset-label"
+						[class.text-error]="
+							newTestForm.controls['name'].invalid && newTestForm.controls['name'].touched
+						">
+						required
+					</p>
+				</fieldset>
+
+				<fieldset class="fieldset">
+					<legend class="fieldset-legend">Describe this test</legend>
+					<textarea
+						[class.textarea-error]="
+							newTestForm.controls['description'].invalid && newTestForm.controls['description'].touched
+						"
+						type="email"
+						class="textarea h-32"
+						placeholder="Type here"
+						formControlName="description"></textarea>
+					<p
+						class="fieldset-label"
+						[class.text-error]="
+							newTestForm.controls['description'].invalid && newTestForm.controls['description'].touched
+						">
+						required
+					</p>
+				</fieldset>
+
+				<!-- //optional test url to start at -->
+				<fieldset class="fieldset">
+					<legend class="fieldset-legend">Test URL</legend>
+					<input type="text" class="input" placeholder="Type here" formControlName="url" />
+					<p class="fieldset-label">optional</p>
+				</fieldset>
+			</form>
+			<div class="flex justify-end w-full">
+				<button class="btn btn-primary" [disabled]="newTestForm.invalid" (click)="createNewTest()">
+					Record Test
+				</button>
+			</div>
+		</div>
+		<form method="dialog" class="modal-backdrop">
+			<button>close</button>
+		</form>
+	</dialog>
+
+	<dialog id="create_flow_modal" class="modal">
+		<div class="modal-box">
+			<h3 class="text-lg font-bold">Create New Flow</h3>
+
+			<form [formGroup]="newFlowForm">
+				<fieldset class="fieldset">
+					<legend class="fieldset-legend">Flow Name</legend>
+					<input
+						[class.input-error]="
+							newFlowForm.controls['name'].invalid && newFlowForm.controls['name'].touched
+						"
+						type="text"
+						class="input"
+						placeholder="Type here"
+						formControlName="name" />
+					<p
+						class="fieldset-label"
+						[class.text-error]="
+							newFlowForm.controls['name'].invalid && newFlowForm.controls['name'].touched
+						">
+						required
+					</p>
+				</fieldset>
+
+				<fieldset class="fieldset">
+					<legend class="fieldset-legend">Describe this flow</legend>
+					<textarea
+						[class.textarea-error]="
+							newFlowForm.controls['description'].invalid && newFlowForm.controls['description'].touched
+						"
+						type="email"
+						class="textarea h-32"
+						placeholder="Type here"
+						formControlName="description"></textarea>
+					<p
+						class="fieldset-label"
+						[class.text-error]="
+							newFlowForm.controls['description'].invalid && newFlowForm.controls['description'].touched
+						">
+						required
+					</p>
+				</fieldset>
+			</form>
+			<div class="flex justify-end w-full">
+				<button class="btn btn-primary" [disabled]="newFlowForm.invalid" (click)="createNewFlow()">
+					Create Flow
+				</button>
+			</div>
+		</div>
+		<form method="dialog" class="modal-backdrop">
+			<button>close</button>
+		</form>
+	</dialog>
+
+	<dialog #confirmCancelModal id="confirm_cancel_modal" class="modal">
+		<div class="modal-box">
+			<h3 class="text-lg font-bold">Cancel Flow Changes</h3>
+			<p class="py-4">Are you sure you want to cancel the changes you made to this flow?</p>
+			<div class="flex justify-between w-full">
+				<button class="btn btn-error" (click)="cancelFlowChanges()">Yes, cancel changes</button>
+				<button class="btn btn-primary" onclick="confirm_cancel_modal.close()">No, keep changes</button>
+			</div>
+		</div>
+		<form method="dialog" class="modal-backdrop">
+			<button>close</button>
+		</form>
+	</dialog>
 </div>
-
-<ng-template #WelcomePage>
-	<div class="hero bg-base-100">
-		<div class="hero-content text-center h-full pt-10">
-			<div class="max-w-lg">
-				@if(testManager.allTests().length <= 0) {
-				<h1 class="text-5xl font-bold">Welcome to the Test Builder</h1>
-				<h3 class="text-lg mt-4">You have not created any tests yet.</h3>
-
-				<p class="py-6">Click on the button below to create a new test.</p>
-
-				<button class="btn btn-primary" onclick="create_test_modal.showModal()">Create New Test</button>
-				} @else if(testManager.allFlows().length <= 0) {
-				<h3 class="text-3xl mt-4">You have not created any flows yet.</h3>
-
-				<p class="py-6">
-					Flows link tests together to create a chain that can be used to test a user's journey through your
-					application.
-				</p>
-
-				<button class="btn btn-primary" onclick="create_flow_modal.showModal()">Create New Flow</button>
-				}
-			</div>
-		</div>
-	</div>
-</ng-template>
-
-<!-- Open the modal using ID.showModal() method -->
-<dialog id="create_test_modal" class="modal">
-	<div class="modal-box">
-		<h3 class="text-lg font-bold">Create New Test</h3>
-
-		<form [formGroup]="newTestForm">
-			<fieldset class="fieldset">
-				<legend class="fieldset-legend">Test Name</legend>
-				<input
-					[class.input-error]="newTestForm.controls['name'].invalid && newTestForm.controls['name'].touched"
-					type="text"
-					class="input"
-					placeholder="Type here"
-					formControlName="name" />
-				<p
-					class="fieldset-label"
-					[class.text-error]="newTestForm.controls['name'].invalid && newTestForm.controls['name'].touched">
-					required
-				</p>
-			</fieldset>
-
-			<fieldset class="fieldset">
-				<legend class="fieldset-legend">Describe this test</legend>
-				<textarea
-					[class.textarea-error]="
-						newTestForm.controls['description'].invalid && newTestForm.controls['description'].touched
-					"
-					type="email"
-					class="textarea h-32"
-					placeholder="Type here"
-					formControlName="description"></textarea>
-				<p
-					class="fieldset-label"
-					[class.text-error]="
-						newTestForm.controls['description'].invalid && newTestForm.controls['description'].touched
-					">
-					required
-				</p>
-			</fieldset>
-
-			<!-- //optional test url to start at -->
-			<fieldset class="fieldset">
-				<legend class="fieldset-legend">Test URL</legend>
-				<input type="text" class="input" placeholder="Type here" formControlName="url" />
-				<p class="fieldset-label">optional</p>
-			</fieldset>
-		</form>
-		<div class="flex justify-end w-full">
-			<button class="btn btn-primary" [disabled]="newTestForm.invalid" (click)="createNewTest()">
-				Record Test
-			</button>
-		</div>
-	</div>
-	<form method="dialog" class="modal-backdrop">
-		<button>close</button>
-	</form>
-</dialog>
-
-<dialog id="create_flow_modal" class="modal">
-	<div class="modal-box">
-		<h3 class="text-lg font-bold">Create New Flow</h3>
-
-		<form [formGroup]="newFlowForm">
-			<fieldset class="fieldset">
-				<legend class="fieldset-legend">Flow Name</legend>
-				<input
-					[class.input-error]="newFlowForm.controls['name'].invalid && newFlowForm.controls['name'].touched"
-					type="text"
-					class="input"
-					placeholder="Type here"
-					formControlName="name" />
-				<p
-					class="fieldset-label"
-					[class.text-error]="newFlowForm.controls['name'].invalid && newFlowForm.controls['name'].touched">
-					required
-				</p>
-			</fieldset>
-
-			<fieldset class="fieldset">
-				<legend class="fieldset-legend">Describe this flow</legend>
-				<textarea
-					[class.textarea-error]="
-						newFlowForm.controls['description'].invalid && newFlowForm.controls['description'].touched
-					"
-					type="email"
-					class="textarea h-32"
-					placeholder="Type here"
-					formControlName="description"></textarea>
-				<p
-					class="fieldset-label"
-					[class.text-error]="
-						newFlowForm.controls['description'].invalid && newFlowForm.controls['description'].touched
-					">
-					required
-				</p>
-			</fieldset>
-		</form>
-		<div class="flex justify-end w-full">
-			<button class="btn btn-primary" [disabled]="newFlowForm.invalid" (click)="createNewFlow()">
-				Create Flow
-			</button>
-		</div>
-	</div>
-	<form method="dialog" class="modal-backdrop">
-		<button>close</button>
-	</form>
-</dialog>
