--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -4,40 +4,43 @@
 
 /* You can add global styles to this file, and also import other style files */
 
+
 @plugin "daisyui/theme" {
-	name: 'light';
-	default: true;
-	prefersdark: false;
-	color-scheme: 'light';
-	--color-base-100: oklch(95.127% 0.007 260.731);
-	--color-base-200: oklch(93.299% 0.01 261.788);
-	--color-base-300: oklch(89.925% 0.016 262.749);
-	--color-base-content: oklch(32.437% 0.022 264.182);
-	--color-primary: oklch(59.435% 0.077 254.027);
-	--color-primary-content: oklch(100% 0 0);
-	--color-secondary: oklch(69.651% 0.059 248.687);
-	--color-secondary-content: oklch(13.93% 0.011 248.687);
-	--color-accent: oklch(77.464% 0.062 217.469);
-	--color-accent-content: oklch(100% 0 0);
-	--color-neutral: oklch(45.229% 0.035 264.131);
-	--color-neutral-content: oklch(89.925% 0.016 262.749);
-	--color-info: oklch(96% 0.044 156.743);
-	--color-info-content: oklch(0% 0 0);
-	--color-success: oklch(79% 0.209 151.711);
-	--color-success-content: oklch(100% 0 0);
-	--color-warning: oklch(82% 0.189 84.429);
-	--color-warning-content: oklch(100% 0 0);
-	--color-error: oklch(70% 0.191 22.216);
-	--color-error-content: oklch(100% 0 0);
-	--radius-selector: 1rem;
-	--radius-field: 0.25rem;
-	--radius-box: 1rem;
-	--size-selector: 0.25rem;
-	--size-field: 0.25rem;
-	--border: 1px;
-	--depth: 1;
-	--noise: 1;
+  name: "light";
+  default: false;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: oklch(100% 0 0);
+  --color-base-200: oklch(98% 0 0);
+  --color-base-300: oklch(95% 0 0);
+  --color-base-content: oklch(21% 0.006 285.885);
+  --color-primary: oklch(45% 0.24 277.023);
+  --color-primary-content: oklch(93% 0.034 272.788);
+  --color-secondary: oklch(83% 0.128 66.29);
+  --color-secondary-content: oklch(40% 0.123 38.172);
+  --color-accent: oklch(77% 0.152 181.912);
+  --color-accent-content: oklch(38% 0.063 188.416);
+  --color-neutral: oklch(14% 0.005 285.823);
+  --color-neutral-content: oklch(92% 0.004 286.32);
+  --color-info: oklch(74% 0.16 232.661);
+  --color-info-content: oklch(29% 0.066 243.157);
+  --color-success: oklch(76% 0.177 163.223);
+  --color-success-content: oklch(37% 0.077 168.94);
+  --color-warning: oklch(82% 0.189 84.429);
+  --color-warning-content: oklch(41% 0.112 45.904);
+  --color-error: oklch(64% 0.246 16.439);
+  --color-error-content: oklch(96% 0.015 12.422);
+  --radius-selector: 0.5rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
 }
+
+
 
 @plugin "daisyui/theme" {
   name: "dark";
@@ -73,3 +76,4 @@
   --depth: 1;
   --noise: 1;
 }
+
