--- a/apps/client/src/components/test-list-item/test-list-item.component.html
+++ b/apps/client/src/components/test-list-item/test-list-item.component.html
@@ -4,7 +4,7 @@
 		<h3>Are you sure you want to delete {{ test.name }}</h3>
 
 		<div class="flex justify-between w-full pt-12">
-			<button class="btn btn-error dark:text-white" (click)="deleteTest.next(test)">
+			<button class="btn btn-error " (click)="deleteTest.next(test)">
 				Delete {{ test.name }}
 			</button>
 			<button class="btn btn-neutral-content" (click)="confirmDeleteModal.close()">Cancel</button>
@@ -32,7 +32,7 @@
 
 <li
 	
-	class=" cursor-move bg-slate-800 rounded-lg"
+	class=" cursor-move bg-neutral-content dark:bg-base-300 rounded-lg"
 	cdkDrag
 	(cdkDragEnded)="dragEnded($event)"
 	(click)="clicked.emit(test)">
@@ -90,7 +90,7 @@
 		<small class="text-xs font-semibold text-gray-500 pb-1">
 			{{ test.description }}
 		</small>
-		<div class="flex flex-col w-full opacity-50 text-xs">
+		<!-- <div class="flex flex-col w-full opacity-50 text-xs">
 			<div
 				class="hover:bg-base-300 hover:text-white hover:scale-110 cursor-pointer p-1 w-fit rounded-md"
 				(click)="copyText(test.startUrl)">
@@ -107,7 +107,7 @@
 					{{ test.endUrl }}
 				</small>
 			</div>
-		</div>
+		</div> -->
 
 		
 	</div>
