Add success, error, and warning styles to chain flow list item component; enhance test history logic

--- a/apps/client/src/components/chain-flow-list-item/chain-flow-list-item.component.html
+++ b/apps/client/src/components/chain-flow-list-item/chain-flow-list-item.component.html
@@ -6,12 +6,12 @@
 	<!-- @let testHistory = testManager.flowTestRunHistory()[chainFlow.flow.id]; -->
 
 	<div
-		class="flex flex-col items-start justify-center p-2 px-4 rounded-lg w-full"
-		[class.text-white]="showLinkWarning"
+		class="flex flex-col items-start justify-center p-2 px-4 rounded-lg w-full "
+
 		[ngClass]="{
-			'bg-success-content': chainFlowTestHistory().success,
-			'bg-error-content': chainFlowTestHistory().error,
-			'bg-warning-content': showLinkWarning
+			'bg-success-content text-white': chainFlowTestHistory().success,
+			'bg-error-content text-white': chainFlowTestHistory().error,
+			'bg-warning-content text-white': showLinkWarning
 		}">
 		
 		<span class="flex justify-between w-full pt-1.5">
