Enhance styling for flow test and chain flow list item components; update class bindings for better visual feedback

--- a/apps/client/src/components/chain-flow-list-item/chain-flow-list-item.component.html
+++ b/apps/client/src/components/chain-flow-list-item/chain-flow-list-item.component.html
@@ -11,7 +11,8 @@
 		[ngClass]="{
 			'bg-success-content text-white': chainFlowTestHistory().success,
 			'bg-error-content text-white': chainFlowTestHistory().error,
-			'bg-warning-content text-white': showLinkWarning
+			'bg-warning-content text-white': showLinkWarning,
+			'text-white': chainFlowTestHistory().error || chainFlowTestHistory().success || showLinkWarning
 		}">
 		
 		<span class="flex justify-between w-full pt-1.5">
