Remove obsolete test recordings and update test-list-item styling; add new login tests with enhanced configurations

--- a/apps/client/src/components/test-list-item/test-list-item.component.html
+++ b/apps/client/src/components/test-list-item/test-list-item.component.html
@@ -32,7 +32,7 @@
 
 <li
 	
-	class=" cursor-move bg-neutral-content dark:bg-base-300 rounded-lg"
+	class="cursor-move bg-base-200 dark:bg-base-300 rounded-lg"
 	cdkDrag
 	(cdkDragEnded)="dragEnded($event)"
 	(click)="clicked.emit(test)">
